# koko-pic-api

./: .dockerignore  .env  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  QWEN.md  README.md  docker-compose.prod.yml  docker-compose.yml  dockerfile  openapi.yaml  rustfmt.toml
.github/workflows/: deploy-dev.yml  deploy-main.yml  deploy.yml
.sqlx/: query-15d99613ed158e126767608b42012beaafb2cefcc6ffe98159b045a4254f09a2.json  query-184cdc1f5471fb1c78475ec2afc245cda1d52383599fe2662eeb56095a5e08bf.json  query-196e685d9b44cc22bfe2d0f3fdaa9548ba3473820468c9c5311284d02a91e8d1.json  query-21381d171c61fe2205fe1afebffdf4207d024c2d531a4089a502b3a32b55aed4.json  query-3e884d6729709cc08955e81a0503c001e48e214e0ce8a19b713fc288a0446b5d.json  query-5be758303beb43e276ba3898a4c23bc8627f7ff4ab29757b5fa1cdc6d217f2b4.json  query-631a2dcbc11b03ac7c4d40419a21ea28865c8b163639de290886238be58ca631.json  query-6749189d96ce846b9284dc7ccc0bf7ba8f63ef893fad5f13106fb0c3aae1a9f1.json  query-6d18b34a3c185ba1450ae8e6d27ebf56cf8b8b94dd533cace14d0ff3ed0d49b5.json  query-7c6005bd00e07217a6b0899abbe851fa5f6c48874a52368324639e3f0b7389aa.json  query-99b73fc654662e5e9bcea0f44b8b0c7a2c8b5ea882fcb7c810cd0795c925c296.json  query-ab6311795c5cba26745ee603d3e68dad4fa5e78efa38c481e0f33713114aaf20.json  query-c67141e0e1d244c6666e1adde7e18df8017db7eb77ca885800863b84f3f5178f.json  query-cc53ba1882a8239c2620144e05381327bd840419266a1b1e4717be1f93bd715e.json  query-d528e804498616d7692422298a0eab9e3d4c5e8644127e59ddd30df8915839f5.json  query-e18b1cf15f11ef01b93c41ce16bd786d91979962204432cd07b4d85249477b71.json  query-f666887e181bc6da473c01540415e139de0102db0f8cf4a0ad9fc8d875ca2084.json
docs/: ARCHITECTURE.md  EMAIL_SPECIFICATION.md  ERROR_HANDLING.md
init/: init-db.sql
migrations/: 00000000000000_create_initial_tables.sql  0001_create_users.sql  0002_create_verification_tokens.sql  0003_create_pictures.sql  0004_create_requests.sql  0005_add_request_id_to_pictures.sql  0006_make_place_name_required.sql
src/: app.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  state.rs  test_support.rs  utils.rs
src/db/: pool.rs
src/domains/: mod.rs
src/domains/picture/: model.rs  repository.rs  rest.rs  service.rs
src/domains/request/: model.rs  repository.rs  rest.rs  service.rs
src/domains/user/: mod.rs  model.rs  repository.rs  rest.rs  service.rs  tests.rs
src/email/: mod.rs  service.rs  types.rs
src/middleware/: auth.rs
src/storage/: mod.rs
src/utils/: error.rs  geo.rs  jwt.rs
tests/: api_tests.rs  users_api_test.rs
