[package]
name = "koko-pic-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "uuid", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
config = "0.15.19"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
async-trait = "0.1"

[dev-dependencies]
axum-macros = "0.5"
hyper-util = { version = "0.1", features = ["tokio", "client", "http1", "http2"] }
mime = "0.3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tokio-test = "0.4"
mockall = "0.13"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
