[package]
name = "koko-pic-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "chrono", "uuid", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
async-trait = "0.1"
validator = { version = "0.19", features = ["derive"] }

[dev-dependencies]
axum-macros = "0.5"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
